app/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxdepprod
  namespace: flux-system
  labels:
    name: nginx-prod-deploy
spec:
  selector:
    matchLabels:
      app: nginxpod
  replicas: 3
  template:
    metadata:
      labels:
        app: nginxpod
    spec:
      containers:
      - name: nginx
        image: nginx
        imagePullPolicy: Always
        ports:
        - containerPort: 80
