app/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxsvcprod
  namespace: flux-system
  labels:
    name: nginx-service
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30082
      name: http
    - port: 443
      nodePort: 30445
      name: https
  selector:
    app: nginxpod
